--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico" />
 <link rel="bookmark" href="favicon.ico" type="image/x-icon"　/>
-<title>Zhou, Xiuze (周秀泽)</title>
+<title>Shuai Zhang</title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -15,26 +15,20 @@
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="https://scholar.google.com/citations?user=xTzN-qoAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a></div>
-<div class="menu-item"><a href="https://www.researchgate.net/profile/Xiuze-Zhou">ResearchGate</a></div>
-<div class="menu-item"><a href="https://github.com/XiuzeZhou">GitHub</a></div>
-<div class="menu-item"><a href="http://snailwish.com/">个人博客</a></div>
+<div class="menu-item"><a href="https://scholar.google.com/citations?user=RvDk-iwAAAAJ&hl=en">Google Scholar</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Zhou, Xiuze (周秀泽) </h1>
+<h1>Shuai Zhang</h1>
 </div>
 <table class="imgtable"><tr><td>
 <a href="https://xiuzezhou.github.io/"><img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
-<td align="left"><p>Research Scientist,<br />
-AI Research Institute,<br />
-Hithink RoyalFlush Information Network Co., Ltd. <br />
-No. 18 Tongshun Street, <br />
-Hangzhou, China <br /> 
-E-mail: <a href="mailto:zhouxiuze@foxmail.com">zhouxiuze@foxmail.com</a></p>
+<td align="left"><p>Postdoc Research,<br />
+  Rensselaer Polytechnic Institute,<br />
+E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com</a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I received the B.S. degree from the Zhejiang University of Science and Technology, in 2012, and the M.S. degree from Xiamen University, in 2016. I am currently a research scientist with the AI Research Institute, Hithink RoyalFlush, China. My main research interests include Machine Learning, Deep Learning and Recommender Systems. Also, I do some research about Computer Vision, such as knee osteoarthritis prediction, and Time Series Prediction, such as remaining useful life prediction of Lithium-ion batteries. I focus on using AI to solve practical problems.</p>
+<p>Shuai is currently a postdoc at Rensselaer Polytechnic Institute. He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering at Rensselaer Polytechnic Institute in 2021, supervised by Prof. Meng Wang. He received his Bachelor's degree in Electrical, and Computer Engineering at the University of Science and Technology of China in 2016. </p>
 <h2>Research</h2>
 <p>My research interests include: </p>
 <ul>
@@ -92,7 +86,7 @@ E-mail: <a href="mailto:zhouxiuze@foxmail.com">zhouxiuze@foxmail.com</a></p>
 </li>
 </ol>
 <p><b>Note</b>: * indicates the corresponding author.</p>
-<p><a href="https://scholar.google.com/citations?user=xTzN-qoAAAAJ&amp;hl=zh-CN&amp;oi=ao">Full list of publications in Google Scholar</a>.</p>
+<p><a href="https://scholar.google.com/citations?user=RvDk-iwAAAAJ&hl=en">Full list of publications in Google Scholar</a>.</p>
 <h3>Academic service</h3>
 <p><b>Reviewer</b></p>
 <ul>
