--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h1>Shuai Zhang</h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://xiuzezhou.github.io/"><img src="photos/bio.jpg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
+<a href="https://shuaizhang.github.io/"><img src="cv/bio.jpge" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
 <td align="left"><p>Postdoc Research,<br />
   Rensselaer Polytechnic Institute,<br />
 E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com</a></p>
@@ -30,33 +30,34 @@ E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com</a></p>
 <h2>About me</h2>
 <p>Shuai is currently a postdoc at Rensselaer Polytechnic Institute. He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering at Rensselaer Polytechnic Institute in 2021, supervised by Prof. Meng Wang. He received his Bachelor's degree in Electrical, and Computer Engineering at the University of Science and Technology of China in 2016. </p>
 <h2>Research</h2>
-<p>My research interests include: </p>
+<p> My long-term research objective is to study the theoretical foundations of artificial
+intelligence and design more principled and efficient algorithms for better, safer, and
+more efficient AI applications. As part of my research, my interests covering the following areas: </p>
 <ul>
-<li><p>Recommender Systems</p>
+<li><p>Deep Learning Theory</p>
 </li>
-<li><p>Computer Vision</p>
+<li><p>Matrix Recovery/Completion</p>
+</li>
+</ul>
+<li><p>Foundation Model</p>
+</li>
+<li><p>Trustworthy AI</p>
+</li>
+</ul>
+<li><p>Graph Neural Network</p>
+</li>
+<li><p>Deep Reinforcement Learning</p>
+</li>
+</ul>
+<li><p>Federated Learning</p>
+</li>
+<li><p>Probability and Statistical Inference</p>
 </li>
 </ul>
 <h3>Current work</h3>
-<ul>
-<li><p>Diffusion for Knee Osteoarthritis Prediction</p>
-</li>
-<li><p>Temporal Neural Network for Knee Osteoarthritis Prediction</p>
-</li>
-<li><p>Semi-supervised for for Recommendation</p>
-</li>
-</ul>
-<h3>Under review</h3>
-<ol>
-<li><p>Y. Lin, W. Zhang, <b>X. Zhou</b>, F. Lin*, W. Zeng, L. Zou*, Y. Liu, P. Wu, "Knowledge-aware Reasoning with Self-supervised Reinforcement Learning for Explainable Recommendation in MOOCs".</p>
-</li> 
-<li><p>M. Chen, T. Ma, and <b>X. Zhou</b>*, "CoGraph: Co-occurrence Graph for Recommendation".</p>
-</li>
-<li><p>M. Chen, T. Ma, and <b>X. Zhou</b>*, "GraphAE: Graph AutoEncoders for Drug-Target Interaction Prediction".</p>
-</ol>
 <h3>Recent publications </h3>
 <ol>
-<li><p>W. Zhang, Y. Lin, Y. Liu, P. Wu, F. Lin*, and <b>X. Zhou</b>*, "Self-Supervised Reinforcement Learning with Dual-reward for Knowledge-aware Recommendation", <i>Applied Soft Computing</i>, Oct. 2022. (IF = 8.263) [<a href="pub/SSRL.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
+<li><p>Shuai Zhang, Meng Wang, Pin-Yu Chen, Sijia Liu, Songtao Lu, Miao Liu. “Joint Edge-Model Sparse Learning is Provably Efficient for Graph Neural Networks.” In International Conference on Learning Representations (ICLR), 2023. [<a href="pub/SSRL.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
 </li>
 <li><p>M. Chen, T. Ma, and <b>X. Zhou</b>*, "CoCNN: Co-occurrence CNN for Recommendation", <i>Expert Systems with Applications</i>, Jun. 2022, 195, pp. 116595. (IF = 8.665) [<a href="pub/CoCNN.pdf">pdf</a>][<a href="https://github.com/XiuzeZhou/cocnn">code</a>]</p>
 </li>
