--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <h1>Shuai Zhang</h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://shuaizhang.github.io/"><img src="cv/bio.jpge" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
-<td align="left"><p>Postdoc Research,<br />
-  Rensselaer Polytechnic Institute,<br />
-E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com</a></p>
+<a href="https://shuaizhang.github.io/"><img src="cv/bio.jpeg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
+<td align="left"><p>Postdoc Research <br />
+  Rensselaer Polytechnic Institute <br />
+E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a></p>
 </td></tr></table>
 <h2>About me</h2>
 <p>Shuai is currently a postdoc at Rensselaer Polytechnic Institute. He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering at Rensselaer Polytechnic Institute in 2021, supervised by Prof. Meng Wang. He received his Bachelor's degree in Electrical, and Computer Engineering at the University of Science and Technology of China in 2016. </p>
@@ -38,17 +38,14 @@ more efficient AI applications. As part of my research, my interests covering th
 </li>
 <li><p>Matrix Recovery/Completion</p>
 </li>
-</ul>
 <li><p>Foundation Model</p>
 </li>
 <li><p>Trustworthy AI</p>
 </li>
-</ul>
 <li><p>Graph Neural Network</p>
 </li>
 <li><p>Deep Reinforcement Learning</p>
 </li>
-</ul>
 <li><p>Federated Learning</p>
 </li>
 <li><p>Probability and Statistical Inference</p>
@@ -65,7 +62,7 @@ more efficient AI applications. As part of my research, my interests covering th
 <p><a href="https://scholar.google.com/citations?user=RvDk-iwAAAAJ&hl=en">Full list of publications in Google Scholar</a>.</p>
 </ol>
 <p><br />
-<a href="cv/cv.pdf">A brief cv</a>.</p>
+<a href="cv/CV.pdf">A brief cv</a>.</p>
 </td>
 </tr>
 </table>
