--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Menu</div>
+<div class="menu-category">Shuai Zhang</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="https://scholar.google.com/citations?user=RvDk-iwAAAAJ&hl=en">Google Scholar</a></div>
 </td>
@@ -22,8 +22,8 @@
 <h1>Shuai Zhang</h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://shuaizhang.github.io/"><img src="cv/bio.jpeg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
-<td align="left"><p>Postdoc Research <br />
+<img src="cv/bio.jpeg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
+<td align="left"><p>Postdoc Research, Department of Electrical, Computer, and System Engineering <br />
   Rensselaer Polytechnic Institute <br />
 E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a></p>
 </td></tr></table>
