--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>Shuai is currently a postdoc at Rensselaer Polytechnic Institute. He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering at Rensselaer Polytechnic Institute in 2021, supervised by Prof. Meng Wang. He received his Bachelor's degree in Electrical, and Computer Engineering at the University of Science and Technology of China in 2016. </p>
+<p>Shuai is currently a postdoc at Rensselaer Polytechnic Institute. He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering at Rensselaer Polytechnic Institute in 2021, supervised by Prof. <a href="https://sites.ecse.rpi.edu/~wang/">Meng Wang</a>. He received his Bachelor's degree in Electrical, and Computer Engineering at the University of Science and Technology of China in 2016. </p>
 <h2>Research</h2>
 <p> My long-term research objective is to study the theoretical foundations of artificial
 intelligence and design more principled and efficient algorithms for better, safer, and
