--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a>
 <p>Shuai is currently a postdoc at Rensselaer Polytechnic Institute. He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering at Rensselaer Polytechnic Institute in 2021, supervised by Prof. <a href="https://sites.ecse.rpi.edu/~wang/">Meng Wang</a>. He received his Bachelor's degree in Electrical, and Computer Engineering at the University of Science and Technology of China in 2016. </p><div class="infoblock">
 <div class="blocktitle">Prospective Students</div>
 <div class="blockcontent">
-<p>I am looking for working with highly motivated students, in terms of RA/TA/externship/internship/visiting students.</p>
+<p>I am on the market for tenure-track AP and exciting industry positions. I am broadly interested in artificial intelligence (AI), deep/machine learning (DL/ML), and signal processing (SP) positions.</p>
 </div></div>
 <h2>Research</h2>
 <p> My long-term research objective is to study the theoretical foundations of artificial
@@ -43,8 +43,6 @@ intelligence and design more principled and efficient algorithms for better, saf
 more efficient AI applications. As part of my research, my interests covering the following areas: </p>
 <ul>
 <li><p>Deep Learning Theory</p>
-</li>
-<li><p>Matrix Recovery/Completion</p>
 </li>
 <li><p>Foundation Model</p>
 </li>
@@ -55,6 +53,8 @@ more efficient AI applications. As part of my research, my interests covering th
 <li><p>Deep Reinforcement Learning</p>
 </li>
 <li><p>Federated Learning</p>
+</li>
+<li><p>Matrix Recovery/Completion</p>
 </li>
 <li><p>Probability and Statistical Inference</p>
 </li>
