--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Shuai</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="cv\CV.pdf">CV(2&nbsp;pages)</a></div>
+<div class="menu-item"><a href="cv\CV.pdf">CV</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-category">Others</div>
 <div class="menu-item"><a href="talk.html">Talks</a></div>
@@ -35,7 +35,7 @@ E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a>
 <p>Shuai is currently a postdoc at Rensselaer Polytechnic Institute. He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering at Rensselaer Polytechnic Institute in 2021, supervised by Prof. <a href="https://sites.ecse.rpi.edu/~wang/">Meng Wang</a>. He received his Bachelor's degree in Electrical, and Computer Engineering at the University of Science and Technology of China in 2016. </p><div class="infoblock">
 <div class="blocktitle">Prospective Students</div>
 <div class="blockcontent">
-<p>I am on the market for tenure-track AP and exciting industry positions. I am broadly interested in artificial intelligence (AI), deep/machine learning (DL/ML), and signal processing (SP) positions.</p>
+<p>I am on the market for tenure-track Assistant Professor. I am broadly interested in artificial intelligence (AI), deep/machine learning (DL/ML), and signal processing (SP) positions.</p>
 </div></div>
 <h2>Research</h2>
 <p> My long-term research objective is to study the theoretical foundations of artificial
