--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 <td align="left"><p>Postdoc Research <br />
   Department of Electrical, Computer, and System Engineering <br />
   Rensselaer Polytechnic Institute <br />
-E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a> 
-  <a href="cv/CV.pdf"> CV </a> <br />
+E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a> <br />
+  <a href="cv/CV.pdf"> CV </a> 
+  <a    </a>
 <a href="https://scholar.google.com/citations?user=RvDk-iwAAAAJ&hl=en">Google Scholar</a> </p>
 </td></tr></table>
 <h2>About me</h2>
