--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,8 @@
 <p>(See the <b>full publication</b> list at <a href="https://scholar.google.com/citations?user=RvDk-iwAAAAJ&hl=en">Google scholar</a>)</p>
 <h2>Selected Publications</h2>
 <p>* represents equal contribution</p>
-<li><p><b>Shuai Zhang</b>, Meng Wang, Pin-Yu Chen, Sijia Liu, Songtao Lu, Miao Liu. “Joint Edge-Model Sparse Learning is Provably Efficient for Graph Neural Networks.” In International Conference on Learning Representations (<b>ICLR<b>), 2023. [<a href="Pub/ICLR23.pdf">pdf</a>]</p>
+ <ol>
+<li><p><b>Shuai Zhang</b>, Meng Wang, Pin-Yu Chen, Sijia Liu, Songtao Lu, Miao Liu. “Joint Edge-Model Sparse Learning is Provably Efficient for Graph Neural Networks.” In International Conference on Learning Representations (<b>ICLR</b>), 2023. [<a href="Pub/ICLR23.pdf">pdf</a>]</p>
 </li>
  <li><p><b>Shuai Zhang</b>, Meng Wang, Sijia Liu, Pin-Yu Chen, and Jinjun Xiong. “How unlabeled data improve generalization in self-training? A one-hidden-layer theoretical analysis.” In Proc. of The Tenth International Conference on Learning Representations (<b>ICLR</b>), 2022. [<a href="Pub/ICLR22.pdf">pdf</a>]</p>
 </li>
@@ -56,9 +57,10 @@
 
 <li><p><b>Shuai Zhang</b>, Yingshuai Hao, Meng Wang, and Joe H. Chow. “Multi-channel missing data recovery by exploiting the low-rank hankel structures.” In 2017 IEEE 7th International Workshop on Computational Advances in Multi-Sensor Adaptive Processing (<b>CAMSAP</b>), pp. 1-5. IEEE, 2017.</p>  
 </li>    
-
+</ol>
+  
 <h2>Preprint</h2>  
-
+</ol>
 <li><p><b>Shuai Zhang</b>, Hongkang Li, Meng Wang, Miao Liu, Pin-Yu Chen, Songtao Lu, Sijia Liu, Keerthiram Murugesan, Subhajit Chaudhury. “On the Convergence and Sample Complexity Analysis of Deep Q-Networks with Epsilon-Greedy Exploration.” Submitted to The Fortieth International Conference on Machine Learning (<b>ICML</b>), 2023.
 </li>
   
