--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 <li><p><b>Shuai Zhang</b>, Meng Wang, Sijia Liu, Pin-Yu Chen, and Jinjun Xiong. “Fast Learning of Graph Neural Networks with Guaranteed Generalizability: Onehidden-layer Case.” In Proc. of 2020 International Conference on Machine Learning (<b>ICML</b>), pp. 11268-11277. PMLR, 2020. [<a href="Pub/ICML20.pdf">pdf</a>]</p>
 </li>
   
-<li><p><b>Shuai Zhang<b>, MengWang, JinjunXiong, Sijia Liu, and Pin-Yu Chen. “Improved Linear Convergence of Training CNNs With Generalizability Guarantees: A One-Hidden-Layer Case.” IEEE Transactions on Neural Networks and Learning Systems (<b>TNNLS</b>). IEEE, 2020. [<a href="Pub/TNNLS.pdf">pdf</a>]</p>
+<li><p><b>Shuai Zhang</b>, MengWang, JinjunXiong, Sijia Liu, and Pin-Yu Chen. “Improved Linear Convergence of Training CNNs With Generalizability Guarantees: A One-Hidden-Layer Case.” IEEE Transactions on Neural Networks and Learning Systems (<b>TNNLS</b>). IEEE, 2020. [<a href="Pub/TNNLS.pdf">pdf</a>]</p>
 </li>
   
 <li><p><b>Shuai Zhang</b>, Meng Wang, Sijia Liu, Pin-Yu Chen, and Jinjun Xiong. Shuai Zhang, and Meng Wang. “Correction of corrupted columns through fast robust Hankel matrix completion.” IEEE Transactions on Signal Processing (<b>TSP</b>), no. 10: 2580-2594. IEEE, 2019. [<a href="Pub/TSP2.pdf">pdf</a>]</p>
@@ -60,7 +60,7 @@
 </ol>
   
 <h2>Preprint</h2>  
-</ol>
+<ol>
 <li><p><b>Shuai Zhang</b>, Hongkang Li, Meng Wang, Miao Liu, Pin-Yu Chen, Songtao Lu, Sijia Liu, Keerthiram Murugesan, Subhajit Chaudhury. “On the Convergence and Sample Complexity Analysis of Deep Q-Networks with Epsilon-Greedy Exploration.” Submitted to The Fortieth International Conference on Machine Learning (<b>ICML</b>), 2023.
 </li>
   
