--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="cv/bio.jpeg" alt="alt text" width="131px" height="160px" /></a>&nbsp;</td>
-<td align="left"><p>Postdoc Research <br />
+<td align="left"><p>Postdoctoral Researcher <br />
   Department of Electrical, Computer, and System Engineering <br />
   Rensselaer Polytechnic Institute <br />
 E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a> <br />
