--- a/talk.html
+++ b/talk.html
@@ -24,21 +24,21 @@
 </div>
 <h2>Tutorial talks </h2>
 <ul>
-<li><p> University of Memphis, Department of Data Science, “<em>Reliable and Efficient Deep Learning Algorithms with Theoretical Guarantees<\em>,” Apr. 2023.
+<li><p> University of Memphis, Department of Data Science, “<em>Reliable and Efficient Deep Learning Algorithms with Theoretical Guarantees</em>,” Apr. 2023.
 </li>
-<li><p> University at Albany, College of Engineering and Applied Sciences, “<em>Reliable and Efficient Deep Learning Algorithms with Theoretical Guarantees<\em>,” Mar. 2023.
+<li><p> University at Albany, College of Engineering and Applied Sciences, “<em>Reliable and Efficient Deep Learning Algorithms with Theoretical Guarantees</em>,” Mar. 2023.
 </li>
-<li><p> University of Massachusetts Lowell, Miner School of Computer & Information Sciences, “<em>Reliable and Efficient Deep Learning Algorithms with Theoretical Guarantees<\em>,” Mar. 2023.
+<li><p> University of Massachusetts Lowell, Miner School of Computer & Information Sciences, “<em>Reliable and Efficient Deep Learning Algorithms with Theoretical Guarantees</em>,” Mar. 2023.
 </li>
-<li><p> Oklahoma State University, Department of Computer Science, “<em>Reliable and Efficient Deep Learning Algorithms with Theoretical Guarantees<\em>,” Feb. 2023.
+<li><p> Oklahoma State University, Department of Computer Science, “<em>Reliable and Efficient Deep Learning Algorithms with Theoretical Guarantees</em>,” Feb. 2023.
 </li>
-<li><p> University of Memphis, Department of Computer Science, “<em>Reliable and Efficient Deep Learning Algorithms with Theoretical Guarantees<\em>,” Feb. 2023.
+<li><p> University of Memphis, Department of Computer Science, “<em>Reliable and Efficient Deep Learning Algorithms with Theoretical Guarantees</em>,” Feb. 2023.
 </li>
-<li><p> New Mexico State University, Department of Computer Science,, “<em>Explainable and Efficient Deep Learning<\em>,” Jan. 2023.
+<li><p> New Mexico State University, Department of Computer Science,, “<em>Explainable and Efficient Deep Learning</em>,” Jan. 2023.
 </li>
-<li><p> Iowa State University, Department of Electrical and Computer Engineering, “<em>Fast and Sample Efficient Deep Learning With Theoretical Guarantees<\em>,” Nov. 2022.
+<li><p> Iowa State University, Department of Electrical and Computer Engineering, “<em>Fast and Sample Efficient Deep Learning With Theoretical Guarantees</em>,” Nov. 2022.
 </li>
-<li><p> IBM T.J. Watson Research Center, Invited Talk, “<em>Fast Learning of Graph Neural Networks with Guaranteed Generalizability: One-hidden-layer Case<\em>,” Aug. 2020.
+<li><p> IBM T.J. Watson Research Center, Invited Talk, “<em>Fast Learning of Graph Neural Networks with Guaranteed Generalizability: One-hidden-layer Case</em>,” Aug. 2020.
 </li>
 
   
