--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   Rensselaer Polytechnic Institute <br />
 E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a> <br />
   <a href="cv/CV.pdf"> CV </a> 
-  <a    </a>
+  &nbsp; &nbsp; &nbsp; &nbsp;
 <a href="https://scholar.google.com/citations?user=RvDk-iwAAAAJ&hl=en">Google Scholar</a> </p>
 </td></tr></table>
 <h2>About me</h2>
