--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   Rensselaer Polytechnic Institute <br />
 E-mail: <a href="mailto:shuaiz708@gmail.com">shuaiz708@gmail.com </a> <br />
   <a href="cv/CV.pdf"> CV </a> 
-  &nbsp; &nbsp; &nbsp; &nbsp;
+ <a> &nbsp; &nbsp; &nbsp; &nbsp; </a> 
 <a href="https://scholar.google.com/citations?user=RvDk-iwAAAAJ&hl=en">Google Scholar</a> </p>
 </td></tr></table>
 <h2>About me</h2>
 <p>Shuai is currently a postdoc at Rensselaer Polytechnic Institute. He received his Ph.D. from the Department of Electrical, Computer, and Systems Engineering at Rensselaer Polytechnic Institute in 2021, supervised by Prof. <a href="https://sites.ecse.rpi.edu/~wang/">Meng Wang</a>. He received his Bachelor's degree in Electrical, and Computer Engineering at the University of Science and Technology of China in 2016. </p><div class="infoblock">
-<div class="blocktitle">Prospective Students</div>
+<div class="blocktitle"></div>
 <div class="blockcontent">
 <p>I am on the market for tenure-track Assistant Professor. I am broadly interested in artificial intelligence (AI), deep/machine learning (DL/ML), and signal processing (SP) positions.</p>
 </div></div>
