--- a/talk.html
+++ b/talk.html
@@ -11,12 +11,12 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Shuai</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
+<div class="menu-category">Shuai@RPI</div>
+<div class="menu-item"><a href="index.html" >Home</a></div>
 <div class="menu-item"><a href="cv\CV.pdf">CV</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-category">Others</div>
-<div class="menu-item"><a href="talk.html">Talks</a></div>
+<div class="menu-item"><a href="talk.html" class="current">Talks</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
