--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 <div class="menu-category">Shuai@RPI</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="cv\CV.pdf">CV</a></div>
+<div class="menu-category">Research</div>
+<div class="menu-item"><a href="research.html">Projects</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-category">Others</div>
 <div class="menu-item"><a href="talk.html">Talks</a></div>
+</td>
 </td>
 <td id="layout-content">
 <div id="toptitle">
