--- a/talk.html
+++ b/talk.html
@@ -12,11 +12,14 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Shuai@RPI</div>
-<div class="menu-item"><a href="index.html" >Home</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="cv\CV.pdf">CV</a></div>
+<div class="menu-category">Research</div>
+<div class="menu-item"><a href="research.html">Projects</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-category">Others</div>
 <div class="menu-item"><a href="talk.html" class="current">Talks</a></div>
+</td>
 </td>
 <td id="layout-content">
 <div id="toptitle">
